# neovim_docker

./: Cargo.toml  LICENSE  README.md
base_image/: dockerfile
config/basic/: .p10k.zsh  .zshrc  dockerfile  help.md  init.vim
src/: main.rs
src/ui/: command.rs  error.rs  help.rs  mod.rs  new_container.rs  popup.rs  search.rs
