[package]
name = "neovim_docker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shiplift = "0.7"
tokio = { version = "1.9.0", features = ["full"] }
termion = "*"
tui = "0.15.0"
futures-util = "0.3.16"
futures = "0.3.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
home = "0.5.3"
tar = "0.4.35"
